# cpuminer-opt

./: Makefile.am  cpu-miner.c  equi-stratum.cpp
equi/: equihash.cpp
verus/: verus_clhash.h  verus_hash.cpp  verus_hash.h
